# ARMCortexM-CppLib-TestFramework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
cmake/: arm-none-eabi.cmake
tests/: CMakeLists.txt  Makefile
tests/firmware/common/: startup.cpp  test_framework.hpp
tests/firmware/cortexm0/: linker.ld  main.cpp  test_nvic.cpp  test_scb.cpp  test_systick.cpp
tests/robot/: common_keywords.robot  cortexm0_tests.robot  cortexm0plus_tests.robot  cortexm1_tests.robot  cortexm3_tests.robot
tests/scripts/: advanced_test_runner.py  run_all_tests.sh  run_test.sh
